--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ html>
   <meta name="viewport" content="width=device-width" />
   <title>Clarusway.practice</title>
   <link href="/css/app.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
   <link href="/css/font-awesome.css" rel="stylesheet">
   <link href="/css/registration.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="https://instructure-uploads.s3.amazonaws.com/account_109600000000000001/attachments/18918/Cybertek_Icon_PNG_Large%20copy.png">
@@ -113,7 +114,7 @@ html>
   <div id='page-footer' class="row">
     <div class="large-4 large-centered columns">
       <hr>
-      <div style="text-align: center;">Powered by <a target="_blank" href="https://cybertekschool.com/">Cybertek School</a></div>
+      <div style="text-align: center;">Powered by <a target="_blank" href="https://clarusway.com/">Clarusway</a></div>
     </div>
   </div>
 </div>
