--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="styles.css" rel="stylesheet">
   <link href="/css/font-awesome.css" rel="stylesheet">
   <link href="/css/registration.css" rel="stylesheet">
-  <link rel="shortcut icon" type="image/x-icon" href="https://instructure-uploads.s3.amazonaws.com/account_109600000000000001/attachments/18918/Cybertek_Icon_PNG_Large%20copy.png">
+  <link rel="shortcut icon" type="image/x-icon" href="https://drive.google.com/open?id=1-FjBh30CxhxQxXeSMIQ1yjRaiIwjT3xy">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
 <!--  <script src="/js/vendor/jquery-1.11.3.min.js"></script>-->
