--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <link href="styles.css" rel="stylesheet">
   <link href="/css/font-awesome.css" rel="stylesheet">
   <link href="/css/registration.css" rel="stylesheet">
-  <link rel="shortcut icon" type="image/x-icon" href="https://drive.google.com/open?id=1-FjBh30CxhxQxXeSMIQ1yjRaiIwjT3xy">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+ 
 <!--  <script src="/js/vendor/jquery-1.11.3.min.js"></script>-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!--  <script src="/js/vendor/jquery-ui-1.11.4/jquery-ui.js"></script>-->
@@ -52,7 +50,7 @@
 </style>
   <div class="row">
     <div class="col-sm-8">
-      <h1 class="h1"><span class="h1y">Test Automation Practice</span></h1>
+      <h1 class="h1"><span class="h1y">Clarusway Test Automation Practice</span></h1>
       <h2><span class="h2">Available Examples</span></h2>
     </div>
   </div>
