--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width" />
   <title>Clarusway Practice</title>
   <link href="/css/app.css" rel="stylesheet">
+   <link href="styles.css" rel="stylesheet">
   <link href="/css/font-awesome.css" rel="stylesheet">
   <link href="/css/registration.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="https://drive.google.com/open?id=1-FjBh30CxhxQxXeSMIQ1yjRaiIwjT3xy">
