--- a/abtest.html
+++ b/abtest.html
@@ -45,8 +45,11 @@ html>
       <div class="example">
   <h3>No A/B Test</h3>
   <p>
-    Also known as split testing. This is a way in which businesses are able to simultaneously test and learn from different versions of a page to see which text and/or functionality works best towards a desired outcome (e.g. a user action such as a click-through).
-  </p>
+    The number of visitors on your website equals the number of opportunities you have to expand your business by acquiring new customers and build relationships by catering to existing ones. And it is your conversion funnel that decides whether your website gets good traffic and if it converts more visitors. Businesses want visitors to take an action (also called a conversion) on their website and the rate at which a website can drive this is called its "conversion rate". The more optimized your funnel, higher is the visitors’ chance to convert.
+
+    <br>One way to optimize your website’s funnel is A/B testing. A/B testing (also sometimes referred to as split testing) is the practice of showing 2 variants of the same web page to different segments of visitors at the same time and comparing which variant drives more conversions. Typically, the one that gives higher conversions is the winning variant, applying which can help you optimize your site for better results.
+
+ </p>
 </div>
 
     </div>
