--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
   </div>
 <ul class="list-group">
-  <li class="list-group-item"><a href='/abtest'>A/B Testing</a></li>
+  <li class="list-group-item"><a target="_blank" href="abtest.html">A/B Testing</a></li>
   <li class="list-group-item"><a href='/add_remove_elements/'>Add/Remove Elements</a></li>
   <li class="list-group-item"><a href='/autocomplete'>Autocomplete</a></li>
   <li class="list-group-item"><a href='/basic_auth'>Basic Auth</a> (user and pass: admin)</li>
