--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Clarusway Practice</title>
   <link href="/css/app.css" rel="stylesheet">
    <link href="styles.css" rel="stylesheet">
-   <link href="abtest.html">
+   <link href="abtest1.html">
   <link href="/css/font-awesome.css" rel="stylesheet">
   <link href="/css/registration.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="https://drive.google.com/open?id=1-FjBh30CxhxQxXeSMIQ1yjRaiIwjT3xy">
@@ -59,7 +59,7 @@
     </div>
   </div>
 <ul class="list-group">
-  <li class="list-group-item"><a href="abtest.html">A/B Testing</a></li>
+  <li class="list-group-item"><a href="abtest1.html">A/B Testing</a></li>
   <li class="list-group-item"><a href='/add_remove_elements/'>Add/Remove Elements</a></li>
   <li class="list-group-item"><a href='/autocomplete'>Autocomplete</a></li>
   <li class="list-group-item"><a href='/basic_auth'>Basic Auth</a> (user and pass: admin)</li>
