--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </style>
   <div class="row">
     <div class="col-sm-8">
-      <h1 class="h1"><span class="h1y">Test Automation Practice</span></h1>
+      <h1 class="h1"><span class="h1y">Clarusway Test Automation Practice</span></h1>
       <h2><span class="h2">Available Examples</span></h2>
     </div>
   </div>
