--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link href="/css/app.css" rel="stylesheet">
    <link href="styles.css" rel="stylesheet">
    <link href="abtest1.html">
-  <link href="/css/font-awesome.css" rel="stylesheet">
-  <link href="/css/registration.css" rel="stylesheet">
+  <link href="awesome.css" rel="stylesheet">
+  <link href="registration.css" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="https://drive.google.com/open?id=1-FjBh30CxhxQxXeSMIQ1yjRaiIwjT3xy">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
@@ -59,7 +59,7 @@
     </div>
   </div>
 <ul class="list-group">
-  <li class="list-group-item"><a link="abtest1.html">A/B Testing</a></li>
+  <li class="list-group-item"><a href="abtest1.html">A/B Testing</a></li>
   <li class="list-group-item"><a href='/add_remove_elements/'>Add/Remove Elements</a></li>
   <li class="list-group-item"><a href='/autocomplete'>Autocomplete</a></li>
   <li class="list-group-item"><a href='/basic_auth'>Basic Auth</a> (user and pass: admin)</li>
