--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <script src="/js/vendor/298279967.js"></script>
+  <script src="298279967.js"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
   <title>Clarusway Practice</title>
-  <link href="/css/app.css" rel="stylesheet">
+  <link href="app.css" rel="stylesheet">
    <link href="styles.css" rel="stylesheet">
    <link href="abtest1.html">
   <link href="awesome.css" rel="stylesheet">
