--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.6/dist/loadingoverlay.min.js"></script>
   
-  <img src="logo.png" alt="logo">
+  
 </head>
 <body>
 <nav class="navbar navbar-expand-sm bg-light">
@@ -116,7 +116,8 @@
   <div id='page-footer' class="row">
     <div class="large-4 large-centered columns">
       <hr>
-      <div style="text-align: center;">Powered by <a target="_blank" href="https://clarusway.com/">Clarusway</a></div>
+      <div style="text-align: center;">Powered by <a target="_blank" href="https://clarusway.com/">Clarusway</a><img src="logo.png" alt="logo"></div>
+      
     </div>
   </div>
 </div>
