--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <div id='page-footer' class="row">
     <div class="large-4 large-centered columns">
       <hr>
-      <div style="text-align: center;">Powered by <a target="_blank" href="https://clarusway.com/">Clarusway</a><img src="logo1.png" alt="logo"></div>
+      <div style="text-align: center;">Powered by <a target="_blank" href="https://clarusway.com/"><img src="logo1.png" alt="logo"></a></div>
       
     </div>
   </div>
