--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   
 </head>
 <body>
-  <img src="logo1.png" alt="logo">
+  
 <nav class="navbar navbar-expand-sm bg-light">
   <ul class="navbar-nav">
     <li class="nav-item">
@@ -117,7 +117,7 @@
   <div id='page-footer' class="row">
     <div class="large-4 large-centered columns">
       <hr>
-      <div style="text-align: center;">Powered by <a target="_blank" href="https://clarusway.com/">Clarusway</a></div>
+      <div style="text-align: center;">Powered by <a target="_blank" href="https://clarusway.com/"><img src="logo1.png" alt="logo"></a></div>
       
     </div>
   </div>
