--- a/add_remove_element.html
+++ b/add_remove_element.html
@@ -71,7 +71,7 @@ button {
   <div id='page-footer' class="row">
     <div class="large-4 large-centered columns">
       <hr>
-      <div style="text-align: center;">Powered by <a target="_blank" href="https://cybertekschool.com/">Cybertek School</a></div>
+       <div style="text-align: center;">Powered by <a target="_blank" href="https://clarusway.com/"><img src="logo1.png" alt="logo"></a></div>
     </div>
   </div>
 </div>
