--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   </div>
 <ul class="list-group">
   <li class="list-group-item"><a href="abtest1.html">A/B Testing</a></li>
-  <li class="list-group-item"><a href='/add_remove_elements/'>Add/Remove Elements</a></li>
-  <li class="list-group-item"><a href='/autocomplete'>Autocomplete</a></li>
+  <li class="list-group-item"><a href="remove_elements.html">Add/Remove Elements</a></li>
+  <li class="list-group-item"><a href="autocomplete.html">Autocomplete</a></li>
   <li class="list-group-item"><a href='/basic_auth'>Basic Auth</a> (user and pass: admin)</li>
   <li class="list-group-item"><a href='/broken_images'>Broken Images</a></li>
   <li class="list-group-item"><a href='/challenging_dom'>Challenging DOM</a></li>
