--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@
   <li class="list-group-item"><a href="abtest1.html">A/B Testing</a></li>
   <li class="list-group-item"><a href="remove_elements.html">Add/Remove Elements</a></li>
   <li class="list-group-item"><a href="autocomplete.html">Autocomplete</a></li>
-  <li class="list-group-item"><a href='/basic_auth'>Basic Auth</a> (user and pass: admin)</li>
-  <li class="list-group-item"><a href='/broken_images'>Broken Images</a></li>
-  <li class="list-group-item"><a href='/challenging_dom'>Challenging DOM</a></li>
-  <li class="list-group-item"><a href='/checkboxes'>Checkboxes</a></li>
-  <li class="list-group-item"><a href='/context_menu'>Context Menu</a></li>
-  <li class="list-group-item"><a href='/disappearing_elements'>Disappearing Elements</a></li>
+  <li class="list-group-item"><a href="broken_images.html">Broken Images</a></li>
+  <li class="list-group-item"><a href="challenging_dom.html">Challenging DOM</a></li>
+  <li class="list-group-item"><a href="checkboxes.html">Checkboxes</a></li>
+  <li class="list-group-item"><a href="context_menu.html">Context Menu</a></li>
+  <li class="list-group-item"><a href="disappearing_elements.html">Disappearing Elements</a></li>
   <li class="list-group-item"><a href='/drag_and_drop'>Drag and Drop</a></li>
   <li class="list-group-item"><a href='/dropdown'>Dropdown</a></li>
   <li class="list-group-item"><a href='/dynamic_content'>Dynamic Content</a></li>
