--- a/broken_images.html
+++ b/broken_images.html
@@ -57,7 +57,7 @@
   <h3>Broken Images</h3>
   <img src="asdf.jpg" />
   <img src="hjkl.jpg" />
-  <img src="img/avatar-blank.jpg" />
+  <img src="logo.png" />
 </div>
 
     </div>
