--- a/abdest1.html
+++ b/abdest1.html
@@ -1,13 +1,12 @@
 <html>
 <head>
-  <script src="/js/vendor/298279967.js"></script>
+  <script src="298279967.js"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
   <title>Clarusway Practice</title>
-  <link href="/css/app.css" rel="stylesheet">
-  <link href="/syteles2.css" rel="stylesheet">
-  <link href="/css/font-awesome.css" rel="stylesheet">
-  <link href="/css/registration.css" rel="stylesheet">
+  <link href="app.css" rel="stylesheet">
+  <link href="font-awesome.css" rel="stylesheet">
+  <link href="registration.css" rel="stylesheet">
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
 <!--  <script src="/js/vendor/jquery-1.11.3.min.js"></script>-->
@@ -15,8 +14,8 @@
 <!--  <script src="/js/vendor/jquery-ui-1.11.4/jquery-ui.js"></script>-->
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-  <script src="/js/foundation/foundation.js"></script>
-  <script src="/js/foundation/foundation.alerts.js"></script>
+  <script src="foundation.js"></script>
+  <script src="foundation.alerts.js"></script>
   <script>
       $(document).foundation();
   </script>
@@ -31,7 +30,7 @@
 <nav class="navbar navbar-expand-sm bg-light">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="/">Home</a>
+      <a class="nav-link" href="index.html">Home</a>
     </li>
   </ul>
 </nav>
@@ -57,7 +56,8 @@
   <div id='page-footer' class="row">
     <div class="large-4 large-centered columns">
       <hr>
-      <div style="text-align: center;">Powered by <a target="_blank" href="https://clarusway.com/">Clarusway</a></div>
+  <div style="text-align: center;">Powered by <a target="_blank" href="https://clarusway.com/"><img src="logo1.png" alt="logo"></a></div>
+      
     </div>
   </div>
 </div>
