--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <nav class="navbar navbar-expand-sm bg-light">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="/">Home</a>
+      <a class="nav-link" href="index.html">Home</a>
     </li>
   </ul>
 </nav>
@@ -61,13 +61,14 @@
   </div>
 <ul class="list-group">
   <li class="list-group-item"><a href="abtest1.html">A/B Testing</a></li>
-  <li class="list-group-item"><a href="remove_elements.html">Add/Remove Elements</a></li>
-  <li class="list-group-item"><a href="autocomplete.html">Autocomplete</a></li>
-  <li class="list-group-item"><a href="broken_images.html">Broken Images</a></li>
-  <li class="list-group-item"><a href="challenging_dom.html">Challenging DOM</a></li>
-  <li class="list-group-item"><a href="checkboxes.html">Checkboxes</a></li>
-  <li class="list-group-item"><a href="context_menu.html">Context Menu</a></li>
-  <li class="list-group-item"><a href="disappearing_elements.html">Disappearing Elements</a></li>
+  <li class="list-group-item"><a href="add_remove_elements.html">Add/Remove Elements</a></li>
+  <li class="list-group-item"><a href='/autocomplete'>Autocomplete</a></li>
+  <li class="list-group-item"><a href='/basic_auth'>Basic Auth</a> (user and pass: admin)</li>
+  <li class="list-group-item"><a href='/broken_images'>Broken Images</a></li>
+  <li class="list-group-item"><a href='/challenging_dom'>Challenging DOM</a></li>
+  <li class="list-group-item"><a href='/checkboxes'>Checkboxes</a></li>
+  <li class="list-group-item"><a href='/context_menu'>Context Menu</a></li>
+  <li class="list-group-item"><a href='/disappearing_elements'>Disappearing Elements</a></li>
   <li class="list-group-item"><a href='/drag_and_drop'>Drag and Drop</a></li>
   <li class="list-group-item"><a href='/dropdown'>Dropdown</a></li>
   <li class="list-group-item"><a href='/dynamic_content'>Dynamic Content</a></li>
