--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <!--  <script src="/js/vendor/jquery-ui-1.11.4/jquery-ui.js"></script>-->
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-  <script src="/js/foundation/foundation.js"></script>
-  <script src="/js/foundation/foundation.alerts.js"></script>
+  <script src="foundation.js"></script>
+  <script src="foundation.alerts.js"></script>
   <script>
       $(document).foundation();
   </script>
@@ -63,7 +63,6 @@
   <li class="list-group-item"><a href="abtest1.html">A/B Testing</a></li>
   <li class="list-group-item"><a href="add_remove_elements.html">Add/Remove Elements</a></li>
   <li class="list-group-item"><a href='/autocomplete'>Autocomplete</a></li>
-  <li class="list-group-item"><a href='/basic_auth'>Basic Auth</a> (user and pass: admin)</li>
   <li class="list-group-item"><a href='/broken_images'>Broken Images</a></li>
   <li class="list-group-item"><a href='/challenging_dom'>Challenging DOM</a></li>
   <li class="list-group-item"><a href='/checkboxes'>Checkboxes</a></li>
