--- a/index.html
+++ b/index.html
@@ -62,51 +62,50 @@
 <ul class="list-group">
   <li class="list-group-item"><a href="abtest1.html">A/B Testing</a></li>
   <li class="list-group-item"><a href="add_remove_elements.html">Add/Remove Elements</a></li>
-  <li class="list-group-item"><a href='/autocomplete'>Autocomplete</a></li>
-  <li class="list-group-item"><a href='/broken_images'>Broken Images</a></li>
-  <li class="list-group-item"><a href='/challenging_dom'>Challenging DOM</a></li>
-  <li class="list-group-item"><a href='/checkboxes'>Checkboxes</a></li>
-  <li class="list-group-item"><a href='/context_menu'>Context Menu</a></li>
-  <li class="list-group-item"><a href='/disappearing_elements'>Disappearing Elements</a></li>
-  <li class="list-group-item"><a href='/drag_and_drop'>Drag and Drop</a></li>
-  <li class="list-group-item"><a href='/dropdown'>Dropdown</a></li>
-  <li class="list-group-item"><a href='/dynamic_content'>Dynamic Content</a></li>
-  <li class="list-group-item"><a href='/dynamic_controls'>Dynamic Controls</a></li>
-  <li class="list-group-item"><a href='/dynamic_loading'>Dynamic Loading</a></li>
-  <li class="list-group-item"><a href='/entry_ad'>Entry Ad</a></li>
-  <li class="list-group-item"><a href='/exit_intent'>Exit Intent</a></li>
-  <li class="list-group-item"><a href='/download'>File Download</a></li>
-  <li class="list-group-item"><a href='/upload'>File Upload</a></li>
-  <li class="list-group-item"><a href='/floating_menu'>Floating Menu</a></li>
-  <li class="list-group-item"><a href='/forgot_password'>Forgot Password</a></li>
-  <li class="list-group-item"><a href='/login'>Form Authentication</a></li>
-  <li class="list-group-item"><a href='/frames'>Frames</a></li>
-  <li class="list-group-item"><a href='/geolocation'>Geolocation</a></li>
-  <li class="list-group-item"><a href='/horizontal_slider'>Horizontal Slider</a></li>
-  <li class="list-group-item"><a href='/hovers'>Hovers</a></li>
-  <li class="list-group-item"><a href='/infinite_scroll'>Infinite Scroll</a></li>
-  <li class="list-group-item"><a href='/inputs'>Inputs</a></li>
-  <li class="list-group-item"><a href='/jqueryui/menu'>JQuery UI Menus</a></li>
-  <li class="list-group-item"><a href='/javascript_alerts'>JavaScript Alerts</a></li>
-  <li class="list-group-item"><a href='/javascript_error'>JavaScript onload event error</a></li>
-  <li class="list-group-item"><a href='/key_presses'>Key Presses</a></li>
-  <li class="list-group-item"><a href='/large'>Large & Deep DOM</a></li>
-  <li class="list-group-item"><a href='/multiple_buttons'>Multiple Buttons</a></li>
-  <li class="list-group-item"><a href='/windows'>Multiple Windows</a></li>
-  <li class="list-group-item"><a href='/nested_frames'>Nested Frames</a></li>
-  <li class="list-group-item"><a href='/open_new_tab'>New tab</a></li>
-  <li class="list-group-item"><a href='/notification_message'>Notification Messages</a></li>
-  <li class="list-group-item"><a href='/radio_buttons'>Radio Buttons</a></li>
-  <li class="list-group-item"><a href='/redirector'>Redirect Link</a></li>
-  <li class="list-group-item"><a href='/registration_form'>Registration Form</a></li>
-  <li class="list-group-item"><a href='/download_secure'>Secure File Download</a></li>
-  <li class="list-group-item"><a href='/shifting_content'>Shifting Content</a></li>
-  <li class="list-group-item"><a href='/sign_up'>Sign Up For Mailing List</a></li>
-  <li class="list-group-item"><a href='/slow'>Slow Resources</a></li>
-  <li class="list-group-item"><a href='/tables'>Sortable Data Tables</a></li>
-  <li class="list-group-item"><a href='/status_codes'>Status Codes</a></li>
-  <li class="list-group-item"><a href='/typos'>Typos</a></li>
-  <li class="list-group-item"><a href='/tinymce'>WYSIWYG Editor</a></li>
+  <li class="list-group-item"><a href="autocomplete.html">Autocomplete</a></li>
+  <li class="list-group-item"><a href="broken_images.html">Broken Images</a></li>
+  <li class="list-group-item"><a href="challenging_dom.html">Challenging DOM</a></li>
+  <li class="list-group-item"><a href="checkboxes.html">Checkboxes</a></li>
+  <li class="list-group-item"><a href="context_menu.html">Context Menu</a></li>
+  <li class="list-group-item"><a href="disappearing_elements.html">Disappearing Elements</a></li>
+  <li class="list-group-item"><a href="drag_and_drop.html">Drag and Drop</a></li>
+  <li class="list-group-item"><a href="dropdown.html">Dropdown</a></li>
+  <li class="list-group-item"><a href="dynamic_content.html">Dynamic Content</a></li>
+  <li class="list-group-item"><a href="dynamic_controls.html">Dynamic Controls</a></li>
+  <li class="list-group-item"><a href="dynamic_loading.html">Dynamic Loading</a></li>
+  <li class="list-group-item"><a href="entry_ad.html">Entry Ad</a></li>
+  <li class="list-group-item"><a href="exit_intent.html">Exit Intent</a></li>
+  <li class="list-group-item"><a href="download.html">File Download</a></li>
+  <li class="list-group-item"><a href="upload.html">File Upload</a></li>
+  <li class="list-group-item"><a href="floating_menu.html">Floating Menu</a></li>
+  <li class="list-group-item"><a href="forgot_password.html">Forgot Password</a></li>
+  <li class="list-group-item"><a href="login.html">Form Authentication</a></li>
+  <li class="list-group-item"><a href="frames.html">Frames</a></li>
+  <li class="list-group-item"><a href="geolocation.html">Geolocation</a></li>
+  <li class="list-group-item"><a href="horizontal_slider.html">Horizontal Slider</a></li>
+  <li class="list-group-item"><a href="hovers.html">Hovers</a></li>
+  <li class="list-group-item"><a href="infinite_scroll.html">Infinite Scroll</a></li>
+  <li class="list-group-item"><a href="inputs.html">Inputs</a></li>
+  <li class="list-group-item"><a href="jqueryui/menu.html">JQuery UI Menus</a></li>
+  <li class="list-group-item"><a href="javascript_alerts.html">JavaScript Alerts</a></li>
+  <li class="list-group-item"><a href="javascript_error.html">JavaScript onload event error</a></li>
+  <li class="list-group-item"><a href="key_presses.html">Key Presses</a></li>
+  <li class="list-group-item"><a href="large.html">Large & Deep DOM</a></li>
+  <li class="list-group-item"><a href="windows.html">Multiple Windows</a></li>
+  <li class="list-group-item"><a href="nested_frames.html">Nested Frames</a></li>
+  <li class="list-group-item"><a href="open_new_tab.html">New tab</a></li>
+  <li class="list-group-item"><a href="notification_message.html">Notification Messages</a></li>
+  <li class="list-group-item"><a href="radio_buttons.html">Radio Buttons</a></li>
+  <li class="list-group-item"><a href="redirector.html">Redirect Link</a></li>
+  <li class="list-group-item"><a href="registration_form.html">Registration Form</a></li>
+  <li class="list-group-item"><a href="download_secure.html">Secure File Download</a></li>
+  <li class="list-group-item"><a href="shifting_content.html">Shifting Content</a></li>
+  <li class="list-group-item"><a href="sign_up.html">Sign Up For Mailing List</a></li>
+  <li class="list-group-item"><a href="slow.html">Slow Resources</a></li>
+  <li class="list-group-item"><a href="tables.html">Sortable Data Tables</a></li>
+  <li class="list-group-item"><a href="status_codes.html">Status Codes</a></li>
+  <li class="list-group-item"><a href="typos.html">Typos</a></li>
+  <li class="list-group-item"><a href="tinymce.html">WYSIWYG Editor</a></li>
 </ul>
 
 
