--- a/add_remove_elements.html
+++ b/add_remove_elements.html
@@ -1,6 +1,6 @@
 html>
 <head>
-  <script src="/js/vendor/298279967.js"></script>
+  <script src="298279967.js"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
   <title>Clarusway Practice</title>
@@ -13,8 +13,8 @@ html>
 <!--  <script src="/js/vendor/jquery-ui-1.11.4/jquery-ui.js"></script>-->
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-  <script src="/js/foundation/foundation.js"></script>
-  <script src="/js/foundation/foundation.alerts.js"></script>
+  <script src="foundation.js"></script>
+  <script src="foundation.alerts.js"></script>
   <script>
       $(document).foundation();
   </script>
@@ -29,7 +29,7 @@ html>
 <nav class="navbar navbar-expand-sm bg-light">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="/">Home</a>
+      <a class="nav-link" href="index.html">Home</a>
     </li>
   </ul>
 </nav>
