--- a/context_menu.html
+++ b/context_menu.html
@@ -59,7 +59,7 @@
 </div>
 
 </br></br>
-<strong>NOTE: This functionality currently only works on Firefox. See <a href="https://github.com/tourdedave/the-internet/issues/12">this open issue</a> for details.</strong>
+<strong>NOTE: This functionality currently only works on Firefox.</strong>
 
     </div>
   </div>
