--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <li class="list-group-item"><a href="hovers.html">Hovers</a></li>
   <li class="list-group-item"><a href="infinite_scroll.html">Infinite Scroll</a></li>
   <li class="list-group-item"><a href="inputs.html">Inputs</a></li>
-  <li class="list-group-item"><a href="jqueryui/menu.html">JQuery UI Menus</a></li>
+  <li class="list-group-item"><a href="jqueryui_menu.html">JQuery UI Menus</a></li>
   <li class="list-group-item"><a href="javascript_alerts.html">JavaScript Alerts</a></li>
   <li class="list-group-item"><a href="javascript_error.html">JavaScript onload event error</a></li>
   <li class="list-group-item"><a href="key_presses.html">Key Presses</a></li>
