--- a/checkboxes.html
+++ b/checkboxes.html
@@ -7,7 +7,7 @@
   <script src="298279967.js"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Practice</title>
+  <title>Clarusway Practice</title>
   <link href="app.css" rel="stylesheet">
   <link href="font-awesome.css" rel="stylesheet">
   <link href="registration.css" rel="stylesheet">
