--- a/disappearing_elements.html
+++ b/disappearing_elements.html
@@ -87,11 +87,11 @@ li a:hover {
 
   <hr>
   <ul>
-                  <li><a href="/">Home</a></li>
-                  <li><a href="/about/">About</a></li>
-                  <li><a href="/contact-us/">Contact Us</a></li>
-                  <li><a href="/portfolio/">Portfolio</a></li>
-                  <li><a href="/gallery/">Gallery</a></li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="page1.html">About</a></li>
+                  <li><a href="page1.html">Contact Us</a></li>
+                  <li><a href="page1.html">Portfolio</a></li>
+                  <li><a href="page1.html">Gallery</a></li>
                 <ul>
 </div>
 
