--- a/dynamic_content.html
+++ b/dynamic_content.html
@@ -82,7 +82,7 @@
         </div></br></br>
         <div class='row'>
           <div class='large-2 columns'>
-            <img src='images4.jpg'>
+            <img src='images4.png'>
           </div>
           <div class='large-10 columns'>
             Voluptas occaecati soluta cumque dolorem aut quisquam debitis sed non et voluptatum vero eum consectetur sunt quas aperiam eligendi corrupti facere voluptatibus dolorem voluptas excepturi est aliquid ipsa consequuntur architecto.
