--- a/dynamic_content.html
+++ b/dynamic_content.html
@@ -56,7 +56,7 @@
 <div class='example'>
   <h3>Dynamic Content</h3>
   <p>This example demonstrates the ever-evolving nature of content by loading new text and images on each page refresh.</p>
-  <p>To make some of the content static append <code>?with_content=static</code> or <a href='/dynamic_content?with_content=static'>click here</a>.</p>
+  <p>To make some of the content static append <code>?with_content=static</code> or <a href='dynamic_content2.html'>click here</a>.</p>
 
   <hr>
   </br>
