--- a/floating_menu.html
+++ b/floating_menu.html
@@ -105,7 +105,7 @@
     </div>
   </div>
 </div>
-<script src='/js/vendor/stickyfloat.js'></script>
+<script src='stickyfloat.js'></script>
 <script>
 $('#menu').stickyfloat( {duration: 1} );
 </script>
