--- a/hovers.html
+++ b/hovers.html
@@ -8,7 +8,7 @@
   <script src="298279967.js"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Clarusway ractice</title>
+  <title>Clarusway practice</title>
   <link href="app.css" rel="stylesheet">
   <link href="font-awesome.css" rel="stylesheet">
   <link href="registration.css" rel="stylesheet">
@@ -65,21 +65,21 @@
   <h3>Hovers</h3>
   <p>Hover over the image for additional information</p>
   <div class="figure">
-    <img src="/img/avatar-blank.jpg" alt="User Avatar">
+    <img src="images4.png" alt="User Avatar">
     <div class="figcaption">
       <h5>name: user1</h5>
       <a href="/users/1">View profile</a>
     </div>
   </div>
   <div class="figure">
-    <img src="/img/avatar-blank.jpg" alt="User Avatar">
+    <img src="images2.jpg" alt="User Avatar">
     <div class="figcaption">
       <h5>name: user2</h5>
       <a href="/users/2">View profile</a>
     </div>
   </div>
   <div class="figure">
-    <img src="/img/avatar-blank.jpg" alt="User Avatar">
+    <img src="images1.png" alt="User Avatar">
     <div class="figcaption">
       <h5>name: user3</h5>
       <a href="/users/3">View profile</a>
