--- a/broken_images.html
+++ b/broken_images.html
@@ -65,7 +65,7 @@
   <div id='page-footer' class="row">
     <div class="large-4 large-centered columns">
       <hr>
-      <div style="text-align: center;">Powered by <a target="_blank" href="https://clarusway.com/"><img src="logo1.png" alt="logo"></a></div>
+      <div style="text-align: center;">Powered by <a target="_blank" href="http://clarusway.com/"><img src="logo1.png" alt="logo"></a></div>
        </div>
   </div>
 </div>
