--- a/dynamic_controls.html
+++ b/dynamic_controls.html
@@ -5,7 +5,7 @@
 
 <html>
 <head>
-  <script src="/js/vendor/298279967.js"></script>
+  <script src="298279967.js"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
   <title>Clarusway Practice</title>
@@ -73,7 +73,7 @@
   };
 
   function showDelay(locator) {
-    $(locator).after("<div id='loading'>Wait for it... <img src='/img/ajax-loader.gif'></div></br>");
+    $(locator).after("<div id='loading'>Wait for it... <img src='https://media1.giphy.com/media/3oEjI6SIIHBdRxXI40/giphy.gif'></div></br>");
   };
 
   function pauseThenToggleControls(target) {
