--- a/dynamic_content2.html
+++ b/dynamic_content2.html
@@ -74,7 +74,7 @@
         </div></br></br>
         <div class='row'>
           <div class='large-2 columns'>
-            <img src='mages2.jpg'>
+            <img src='images2.jpg'>
           </div>
           <div class='large-10 columns'>
           Omnis fugiat porro vero quas tempora quis eveniet ab officia cupiditate culpa repellat debitis itaque possimus odit dolorum et iste quibusdam quis dicta autem sint vel quo vel consequuntur dolorem nihil neque sunt aperiam blanditiis.
