--- a/dynamic_loading.html
+++ b/dynamic_loading.html
@@ -54,7 +54,7 @@
 
   <br>
 
-  <a href='/dynamic_loading/1'>Example 1: Element on page that is hidden and become visible after trigger</a>
+  <a href='dynamic_loading_1.html'>Example 1: Element on page that is hidden and become visible after trigger</a>
   <br>
   <br>
   <a href='/dynamic_loading/2'>Example 2: Element on the page that is rendered after the trigger</a>
