--- a/dynamic_loading.html
+++ b/dynamic_loading.html
@@ -57,19 +57,19 @@
   <a href='dynamic_loading_1.html'>Example 1: Element on page that is hidden and become visible after trigger</a>
   <br>
   <br>
-  <a href='/dynamic_loading/2'>Example 2: Element on the page that is rendered after the trigger</a>
+  <a href='/dynamic_loading_2.html'>Example 2: Element on the page that is rendered after the trigger</a>
   <br>
   <br>
-  <a href='/dynamic_loading/3'>Example 3: Element on page that is hidden and become visible after 5 seconds</a>
+  <a href='/dynamic_loading_3.html'>Example 3: Element on page that is hidden and become visible after 5 seconds</a>
   <br>
   <br>
-  <a href='/dynamic_loading/4'>Example 4: Element on the page that is rendered after 5 seconds</a>
+  <a href='/dynamic_loading_4.html'>Example 4: Element on the page that is rendered after 5 seconds</a>
   <br>
   <br>
-  <a href='/dynamic_loading/5'>Example 5: Loading overlay that disappears after time</a>
+  <a href='/dynamic_loading_5.html'>Example 5: Loading overlay that disappears after time</a>
   <br>
   <br>
-  <a href='/dynamic_loading/6'>Example 6: Loading overlay that disappears and disappears again</a>
+  <a href='/dynamic_loading_6.html'>Example 6: Loading overlay that disappears and disappears again</a>
 </div>
 
     </div>
