--- a/exit_intent.html
+++ b/exit_intent.html
@@ -14,8 +14,8 @@
   <link href="registration.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
-<!--  <script src="/js/vendor/jquery-1.11.3.min.js"></script>-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<!--  <script src="jquery-1.11.3.min.js"></script>-->
+  <script src="jquery.min.js"></script>
 <!--  <script src="/js/vendor/jquery-ui-1.11.4/jquery-ui.js"></script>-->
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
@@ -46,7 +46,7 @@
   </div>
   <div class="row">
     <div id="content" class="large-12 columns">
-      <script src="/js/vendor/ouibounce.min.js"></script>
+      <script src="ouibounce.min.js"></script>
 <div class="example">
   <h3>Exit Intent</h3>
   <p>Mouse out of the viewport pane and see a modal window appear.</p>
