--- a/download.html
+++ b/download.html
@@ -46,83 +46,21 @@
   </div>
   <div class="row">
     <div id="content" class="large-12 columns">
-      <div class="example">
+     <div class="example">
   <h3>File Downloader</h3>
-    <a href="download/fatma.rtf">fatma.rtf</a>
+    <a href="download/testfile.txt">testfile.txt</a>
     </br>
-    <a href="download/oguz.txt">oguz.txt</a>
+    <a href="file.txt">file.txt</a>
     </br>
-    <a href="download/junit-4.13-beta-3.jar">junit-4.13-beta-3.jar</a>
+    <a href="b10 all test cases, code.docx">b10 all test cases, code.docx</a>
     </br>
-    <a href="download/file.odt">file.odt</a>
+    <a href="junit-4.13-beta-3.jar">junit-4.13-beta-3.jar</a>
     </br>
-    <a href="download/file.txt">file.txt</a>
+    <a href="testfile.txt">some-file.txt</a>
     </br>
-    <a href="download/testNG.txt">testNG.txt</a>
+    <a href="some-file.txt">oguz.txt</a>
     </br>
-    <a href="download/Test cases 2.pdf">Test cases 2.pdf</a>
-    </br>
-    <a href="download/KELLY.txt">KELLY.txt</a>
-    </br>
-    <a href="download/day52 class note (1).txt">day52 class note (1).txt</a>
-    </br>
-    <a href="download/file.text">file.text</a>
-    </br>
-    <a href="download/fileUploadTest.txt">fileUploadTest.txt</a>
-    </br>
-    <a href="download/xp.txt">xp.txt</a>
-    </br>
-    <a href="download/some-file.txt">some-file.txt</a>
-    </br>
-    <a href="download/sc.txt">sc.txt</a>
-    </br>
-    <a href="download/text.txt">text.txt</a>
-    </br>
-    <a href="download/encapsulation.txt">encapsulation.txt</a>
-    </br>
-    <a href="download/newUpload.txt">newUpload.txt</a>
-    </br>
-    <a href="download/selenium.txt">selenium.txt</a>
-    </br>
-    <a href="download/Screen Shot 2019-11-26 at 8.20.58 PM.png">Screen Shot 2019-11-26 at 8.20.58 PM.png</a>
-    </br>
-    <a href="download/Array.txt">Array.txt</a>
-    </br>
-    <a href="download/FileUploadTest.java">FileUploadTest.java</a>
-    </br>
-    <a href="download/File_upload.txt">File_upload.txt</a>
-    </br>
-    <a href="download/OOP Interview Questions.pdf">OOP Interview Questions.pdf</a>
-    </br>
-    <a href="download/New Text Document.txt">New Text Document.txt</a>
-    </br>
-    <a href="download/1.jpeg.png">1.jpeg.png</a>
-    </br>
-    <a href="download/b10 all test cases, code.docx">b10 all test cases, code.docx</a>
-    </br>
-    <a href="download/test.txt.txt">test.txt.txt</a>
-    </br>
-    <a href="download/2.doc">2.doc</a>
-    </br>
-    <a href="download/login.html">login.html</a>
-    </br>
-    <a href="download/floreantpos.log">floreantpos.log</a>
-    </br>
-    <a href="download/Bitrix24.pdf">Bitrix24.pdf</a>
-    </br>
-    <a href="download/test.txt">test.txt</a>
-    </br>
-    <a href="download/project.docx">project.docx</a>
-    </br>
-    <a href="download/test-file.txt">test-file.txt</a>
-    </br>
-    <a href="download/text.text">text.text</a>
-    </br>
-    <a href="download/file.txt.txt">file.txt.txt</a>
-    </br>
-    <a href="download/Depo.log">Depo.log</a>
-    </br>
-    <a href="download/test_case_7.txt">test_case_7.txt</a>
+    <a href="Depo.log">Depo.log</a>
     </br>
 </div>
 
