--- a/200.html
+++ b/200.html
@@ -51,7 +51,7 @@
   <p>
     This page returned a 200 status code.</br>
     </br>
-    For a definition and common list of HTTP status codes, go <a href='/status_codes'>here</a>
+    For a definition and common list of HTTP status codes, go <a href='status_codes.html'>here</a>
   </p>
 </div>
 
