--- a/status_codes.html
+++ b/status_codes.html
@@ -54,10 +54,10 @@
     Some standard status codes you will run into include but are not limited to:
 
     <ul>
-      <li><a href='status_codes/200'>200</a></li>
-      <li><a href='status_codes/301'>301</a></li>
-      <li><a href='status_codes/404'>404</a></li>
-      <li><a href='status_codes/500'>500</a></li>
+      <li><a href='200.html'>200</a></li>
+      <li><a href='301.html'>301</a></li>
+      <li><a href='404.html'>404</a></li>
+      <li><a href='500.html'>500</a></li>
     </ul>
 
   </p>
