--- a/redirector.html
+++ b/redirector.html
@@ -51,7 +51,7 @@
   <p>
     This is separate from directly returning a redirection status code, in that some browsers cannot handle a raw redirect status code without a destination page as part of the HTTP response.
     <br><br>
-    Click <a id='redirect' href='redirect'>here</a> to trigger a redirect (and be taken to the status codes page).
+    Click <a id='redirect' href='status_codes.html'>here</a> to trigger a redirect (and be taken to the status codes page).
   </p>
 </div>
 
