--- a/notification_message.html
+++ b/notification_message.html
@@ -58,7 +58,7 @@
     </br></br>
     Some rudimentary examples include 'Action successful', 'Action unsuccessful, please try again', etc.
     </br></br>
-    <a href='/notification_message'>Click here</a> to load a new message.
+    <a href='notification_message_rendered.html'>Click here</a> to load a new message.
   </p>
 </div>
 
