--- a/windows.html
+++ b/windows.html
@@ -48,7 +48,7 @@
     <div id="content" class="large-12 columns">
       <div class="example">
   <h3>Opening a new window</h3>
-  <a href='/windows/new', target='_blank'>Click Here</a>
+  <a href='windows_new.html', target='_blank'>Click Here</a>
 </div>
 
     </div>
