--- a/frames.html
+++ b/frames.html
@@ -49,8 +49,8 @@
       <div class="example">
   <h3>Frames</h3>
   <ul>
-    <li><a href='/nested_frames'>Nested Frames</a></li>
-    <li><a href='/iframe'>iFrame</a></li>
+    <li><a href='nested_frames.html'>Nested Frames</a></li>
+    <li><a href='iframe.html'>iFrame</a></li>
   </ul>
 </div>
 
